--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,5 +1,6 @@
 user:
   max_length_full_name: 50
-  max_length_password: 12
-  max_length_user_name: 10
-  min_length_password: 4
+  max_length_password: 20
+  max_length_user_name: 20
+  min_length_password: 3
+  avatar_size: 80
