--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,6 +4,7 @@ user:
   avatar_header_size: 22
   avatar_size: 80
   avatar_size_for_comment: 25
+  avatar_size_for_follow: 30
   avatar_size_for_post: 50
   max_length_content: 100
   max_length_full_name: 50
